Fix: subsections too narrow on mobile

--- a/assets/styles/lists.css
+++ b/assets/styles/lists.css
@@ -1,5 +1,5 @@
 ul {
-  padding: 2em;
+  padding: 2em 0 2em 2em;
   list-style: disc;
   list-style-type: "✥  ";
 }
